fix search on mobile

--- a/web/themes/custom/sfgovpl/src/sass/_blocks.scss
+++ b/web/themes/custom/sfgovpl/src/sass/_blocks.scss
@@ -48,6 +48,8 @@
   }
 }
 
+
+
 .head-right--container {
   display: flex;
   align-items: center;
@@ -130,6 +132,18 @@
   }
 }
 
+.sfgov-logo__container {
+  .sfgov-logo {    
+    @include media-max($mobile-screen) {
+      .sfgov-logo__text {
+        .sfgov-logo__text--title {
+          font-size: 1.7rem;
+        }
+      }
+    }
+  }
+}
+
 .responsive-search {
   position: relative;
   .responsive-search--container {
@@ -150,7 +164,7 @@
     }
     .sfgov-search-form {
       background: #ffffff;
-      padding: 40px 5px 5px 5px;
+      padding: 40px 8px 8px 8px;
       .js-form-type-textfield {
         width: 100%;
       }
